[package]
name = "auto-hash-map"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
hashbrown = { workspace = true, features = ["serde"]}
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shrink-to-fit = { workspace = true, features = ["hashbrown"] }

[dev-dependencies]
criterion = { workspace = true }
turbo-tasks-malloc = { workspace = true }

[[bench]]
name = "tiny_vec"
harness = false
